--- a/Yandex Algo 5 week 4.ipynb
+++ b/Yandex Algo 5 week 4.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e07763cb",
+   "id": "f81f180e",
    "metadata": {},
    "source": [
     "### D. Рапорт\n",
@@ -484,11 +484,362 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 200,
+   "id": "2fee5d20",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 9 6 6 4\n",
+      "3 6 3 3 4\n",
+      "5 6 3 4 6\n",
+      "6 6 3 3 6\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# with open('yandex algo tests/D4_primer.txt') as f: #3\n",
+    "# with open('yandex algo tests/02 (1)') as f: #4\n",
+    "# with open('yandex algo tests/04 (4)') as f: #828\n",
+    "# with open('yandex algo tests/05 (4)') as f: #680\n",
+    "# with open('yandex algo tests/06 (1)_d4') as f: #  672?\n",
+    "    \n",
+    "\n",
+    "# with open('input.txt') as f:\n",
+    "    w, n, m = map(int, f.readline().split())\n",
+    "    words_a = [i for i in map(int, f.readline().split())]\n",
+    "    words_b = [i for i in map(int, f.readline().split())]\n",
+    "    \n",
+    "words_a_pref = [0] \n",
+    "words_b_pref = [0]\n",
+    "\n",
+    "max_word_len_a = max(words_a)\n",
+    "max_word_len_b = max(words_b)\n",
+    "\n",
+    "\n",
+    "for i in range(n):\n",
+    "    words_a_pref.append(words_a[i] + words_a_pref[i])\n",
+    "    \n",
+    "for i in range(m):\n",
+    "    words_b_pref.append(words_b[i] + words_b_pref[i])\n",
+    "    \n",
+    "def count_needed_lines(left_width, w, n, m, words_a, words_b, words_a_pref, words_b_pref):\n",
+    "    needed_lines_for_a = 0\n",
+    "    needed_lines_for_b = 0\n",
+    "    \n",
+    "    \n",
+    "    words_a_used = 0\n",
+    "    \n",
+    "    if max_word_len_a > left_width:\n",
+    "        return -1\n",
+    "    \n",
+    "    else:\n",
+    "    \n",
+    "        while words_a_used < n:\n",
+    "            left = words_a_used\n",
+    "            right = n\n",
+    "\n",
+    "            while left < right:\n",
+    "                middle = (right + left + 1) // 2\n",
+    "                words = middle - words_a_used\n",
+    "                spaces_needed = max(0, words - 1)\n",
+    "                word_space_needed = words_a_pref[middle] - words_a_pref[words_a_used]\n",
+    "                total_space_needed = word_space_needed + spaces_needed\n",
+    "#                 print('left', left, 'right', right, 'middle', middle)\n",
+    "#                 print('spaces_needed', spaces_needed)\n",
+    "#                 print('word_space_needed', word_space_needed)\n",
+    "#                 print('total_space_needed', total_space_needed)\n",
+    "                if total_space_needed <= left_width:\n",
+    "                    left = middle\n",
+    "\n",
+    "                else:\n",
+    "                    right = middle - 1\n",
+    "\n",
+    "            needed_lines_for_a += 1\n",
+    "            words_a_used = right\n",
+    "\n",
+    "#             print('needed_lines_for_a', needed_lines_for_a)\n",
+    "#             print('words_a_used', words_a_used)\n",
+    "#             print()\n",
+    "            \n",
+    "            \n",
+    "    words_b_used = 0\n",
+    "    right_width = w - left_width\n",
+    "    \n",
+    "    if max_word_len_b > right_width:\n",
+    "        return -1\n",
+    "    \n",
+    "    else:\n",
+    "    \n",
+    "        while words_b_used < m:\n",
+    "            left = words_b_used\n",
+    "            right = m\n",
+    "\n",
+    "            while left < right:\n",
+    "                middle = (right + left + 1) // 2\n",
+    "                words = middle - words_b_used\n",
+    "                spaces_needed = max(0, words - 1)\n",
+    "                word_space_needed = words_b_pref[middle] - words_b_pref[words_b_used]\n",
+    "                total_space_needed = word_space_needed + spaces_needed\n",
+    "#                 print('left', left, 'right', right, 'middle', middle)\n",
+    "#                 print('spaces_needed', spaces_needed)\n",
+    "#                 print('word_space_needed', word_space_needed)\n",
+    "#                 print('total_space_needed', total_space_needed)\n",
+    "                if total_space_needed <= right_width:\n",
+    "                    left = middle\n",
+    "\n",
+    "                else:\n",
+    "                    right = middle - 1\n",
+    "\n",
+    "            needed_lines_for_b += 1\n",
+    "            words_b_used = right\n",
+    "\n",
+    "#             print('needed_lines_for_b', needed_lines_for_b)\n",
+    "#             print('words_b_used', words_b_used)\n",
+    "#             print()\n",
+    "\n",
+    "        return max(needed_lines_for_a, needed_lines_for_b)\n",
+    "\n",
+    "\n",
+    "\n",
+    "left = max_word_len_a\n",
+    "right = w\n",
+    "min_left = n\n",
+    "min_right = m\n",
+    "smallest_min = max(n,m)\n",
+    "\n",
+    "\n",
+    "\n",
+    "while left < right:\n",
+    "    middle = (left+right) // 2\n",
+    "    middle_plus_one = middle + 1\n",
+    "    middle_minus_one = middle - 1\n",
+    "\n",
+    "\n",
+    "    middle_min = count_needed_lines(middle, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "    middle_plus_one_min = count_needed_lines(middle_plus_one, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "    middle_minus_one_min = count_needed_lines(middle_minus_one, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "\n",
+    "    if middle_min == -1:\n",
+    "        middle_min = max(n,m)\n",
+    "    if middle_plus_one_min == -1:\n",
+    "        middle_plus_one_min = max(n,m)\n",
+    "    if middle_minus_one_min == -1:\n",
+    "        middle_minus_one_min = max(n,m)\n",
+    "\n",
+    "\n",
+    "    if middle_plus_one_min >= middle_min:\n",
+    "        right = middle\n",
+    "        smallest_min = min(middle_min, smallest_min)        \n",
+    "    elif middle_plus_one_min < middle_min:\n",
+    "        left = middle_plus_one\n",
+    "        smallest_min = min(middle_plus_one_min, smallest_min) \n",
+    "\n",
+    "#     elif middle_minus_one_min < middle_min:\n",
+    "#         right = middle_minus_one\n",
+    "#         smallest_min = min(middle_minus_one_min, smallest_min)\n",
+    "#     elif middle_minus_one_min > middle_min:\n",
+    "#         left = middle\n",
+    "#         smallest_min = min(middle_min, smallest_min)\n",
+    "\n",
+    "#     else:\n",
+    "#         left_min = count_needed_lines(left, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "#         right_min = count_needed_lines(right, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "#         if left_min == -1:\n",
+    "#             left_min = max(n,m)\n",
+    "#         if right_min == -1:\n",
+    "#             right_min = max(n,m)\n",
+    "\n",
+    "\n",
+    "#         if left_min < middle_min:\n",
+    "#             right = middle\n",
+    "#             smallest_min = min(left_min, smallest_min)\n",
+    "#         if right_min < middle_min:\n",
+    "#             left = middle\n",
+    "#             smallest_min = min(right_min, smallest_min)\n",
+    "#         else:\n",
+    "#             left += 1\n",
+    "#             right -= 1\n",
+    "            \n",
+    "\n",
+    "        \n",
+    "#         if middle_minus_one_min > middle_min:\n",
+    "#             left = middle\n",
+    "#             smallest_min = min(middle_min, smallest_min)\n",
+    "#         elif middle_minus_one_min < middle_min:\n",
+    "#             right = middle_minus_one\n",
+    "#             smallest_min = min(middle_minus_one_min, smallest_min)\n",
+    "#         else:\n",
+    "#             left += 1\n",
+    "            \n",
+    "    print(left, right, smallest_min, middle_plus_one_min, middle_minus_one_min)\n",
+    "\n",
+    "    \n",
+    "print(smallest_min)\n",
+    "        \n",
+    "        \n",
+    "      "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "24510648",
+   "id": "4079efa3",
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5013359c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68b7f197",
+   "metadata": {},
+   "source": [
+    "### E. Нумерация дробей\n",
+    "\n",
+    "Ограничение времени \t2 секунды\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Георг Кантор доказал, что множество всех рациональных чисел счетно (т.е. все рациональные числа можно пронумеровать).\n",
+    "\n",
+    "Чтобы упорядочить дроби необходимо их положить в таблицу, как показано на рисунке. В строку с номером i этой матрицы по порядку записаны дроби с числителем i, а в столбец с номером j дроби с знаменателем j.\n",
+    "\n",
+    "Дальше необходимо выписать все дроби в том порядке, как показано на рисунке стрелками. Получится такая последовательность: , , , , , , …\n",
+    "\n",
+    "Вам требуется по числу n найти числитель и знаменатель n-ой дроби.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "\n",
+    "Во входном файле дано число n (1 ≤ n ≤ 1018) — порядковый номер дроби в последовательности.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "\n",
+    "В выходной файл требуется вывести через символ / два числа: числитель и знаменатель соответствующей дроби.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "1\n",
+    "\t\n",
+    "\n",
+    "1/1\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "6\n",
+    "\n",
+    "\n",
+    "3/1\n",
+    "\n",
+    "**Пример 3**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "2\n",
+    "\n",
+    "2/1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 207,
+   "id": "c387bcd8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1000000000000000000\n",
+      "179470704/1234742859\n"
+     ]
+    }
+   ],
+   "source": [
+    "#1000000000000000000 179470704/1234742859\n",
+    "\n",
+    "n = int(input())\n",
+    "\n",
+    "#find diagonal\n",
+    "\n",
+    "left = 1\n",
+    "right = n\n",
+    "\n",
+    "while left < right:\n",
+    "    middle = (left+right) // 2\n",
+    "    num_of_elems = middle * (1 + middle) / 2\n",
+    "    \n",
+    "    if num_of_elems >= n:\n",
+    "        right = middle\n",
+    "    else:\n",
+    "        left = middle + 1\n",
+    "\n",
+    "#our element is on diagonal number 'right'\n",
+    "#determine direction of growth\n",
+    "\n",
+    "diagonal = right\n",
+    "growth = ''\n",
+    "\n",
+    "if (int(str(diagonal)[-1]) % 2) == 0:\n",
+    "    growth = 'UP'\n",
+    "else:\n",
+    "    growth = 'DOWN'\n",
+    "    \n",
+    "\n",
+    "\n",
+    "#first element number in row\n",
+    "start = int(((diagonal-1) * (1 + (diagonal-1))) // 2) + 1\n",
+    "\n",
+    "\n",
+    "\n",
+    "#find difference\n",
+    "diff = n - start\n",
+    "\n",
+    "if (growth == 'UP'):\n",
+    "    num = diagonal - diff\n",
+    "    den = 1 + diff\n",
+    "else:\n",
+    "    num = 1 + diff\n",
+    "    den = diagonal - diff\n",
+    "\n",
+    "# print('diagonal',diagonal)\n",
+    "# print('growth',growth)    \n",
+    "# print('start',start)\n",
+    "# print('diff',diff)\n",
+    "print(f'{num}/{den}')\n",
+    "\n",
+    "# print(179470704-179470651)\n",
+    "# print(1234742859-1234742912)\n",
+    "# print(1 + diff)\n",
+    "# print(diagonal-diff)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89397230",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "1000000000000000000\n",
+    "179470704/1234742859"
+   ]
   }
  ],
  "metadata": {
