--- a/Yandex Algo 5 week 4.ipynb
+++ b/Yandex Algo 5 week 4.ipynb
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f81f180e",
+   "id": "d32b2aa3",
    "metadata": {},
    "source": [
     "### D. Рапорт\n",
@@ -484,19 +484,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
-   "id": "2fee5d20",
-   "metadata": {},
+   "execution_count": 294,
+   "id": "804cc00d",
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3 9 6 6 4\n",
-      "3 6 3 3 4\n",
-      "5 6 3 4 6\n",
-      "6 6 3 3 6\n",
-      "3\n"
+      "744 1000 872 1000 16 16 16\n",
+      "745 1000 872 1000 16 16 16\n",
+      "746 1000 873 1000 16 16 16\n",
+      "747 1000 873 1000 16 16 16\n",
+      "748 1000 874 1000 16 16 16\n",
+      "749 1000 874 1000 16 16 16\n",
+      "750 1000 875 1000 16 17 16\n",
+      "750 875 812 16 11 11 11\n",
+      "751 875 813 16 11 11 11\n",
+      "752 875 813 16 11 11 11\n",
+      "753 875 814 16 11 11 11\n",
+      "754 875 814 16 11 11 11\n",
+      "755 875 815 16 11 11 11\n",
+      "756 875 815 16 11 11 11\n",
+      "757 875 816 16 11 11 11\n",
+      "758 875 816 16 11 11 11\n",
+      "759 875 817 16 11 11 11\n",
+      "760 875 817 16 11 11 11\n",
+      "761 875 818 16 11 11 11\n",
+      "762 875 818 16 11 11 11\n",
+      "763 875 819 16 11 12 11\n",
+      "763 819 791 11 10 10 10\n",
+      "764 819 791 11 10 10 10\n",
+      "765 819 792 11 10 10 10\n",
+      "766 819 792 11 10 10 10\n",
+      "767 819 793 11 10 10 10\n",
+      "768 819 793 11 10 10 10\n",
+      "769 819 794 11 10 10 10\n",
+      "770 819 794 11 10 10 10\n",
+      "771 819 795 11 10 10 10\n",
+      "772 819 795 11 10 10 10\n",
+      "773 819 796 11 10 10 10\n",
+      "774 819 796 11 10 10 10\n",
+      "775 819 797 11 10 10 10\n",
+      "776 819 797 11 10 10 10\n",
+      "777 819 798 11 10 10 10\n",
+      "778 819 798 11 10 10 10\n",
+      "779 819 799 11 10 10 10\n",
+      "780 819 799 11 10 10 10\n",
+      "781 819 800 11 10 10 10\n",
+      "782 819 800 11 10 10 10\n",
+      "783 819 801 11 10 11 10\n",
+      "783 801 792 10 10 10 10\n",
+      "784 801 792 10 10 10 10\n",
+      "785 801 793 10 10 10 10\n",
+      "786 801 793 10 10 10 10\n",
+      "787 801 794 10 10 10 10\n",
+      "788 801 794 10 10 10 10\n",
+      "789 801 795 10 10 10 10\n",
+      "790 801 795 10 10 10 10\n",
+      "791 801 796 10 10 10 10\n",
+      "792 801 796 10 10 10 10\n",
+      "793 801 797 10 10 10 10\n",
+      "794 801 797 10 10 10 10\n",
+      "795 801 798 10 10 10 10\n",
+      "796 801 798 10 10 10 10\n",
+      "797 801 799 10 10 10 10\n",
+      "798 801 799 10 10 10 10\n",
+      "799 801 800 10 10 10 10\n",
+      "800 801 800 10 10 10 10\n",
+      "10\n"
      ]
     }
    ],
@@ -506,7 +564,10 @@
     "# with open('yandex algo tests/04 (4)') as f: #828\n",
     "# with open('yandex algo tests/05 (4)') as f: #680\n",
     "# with open('yandex algo tests/06 (1)_d4') as f: #  672?\n",
-    "    \n",
+    "# with open('yandex algo tests/22 (1)') as f: #  56   \n",
+    "with open('yandex algo tests/11 (2)') as f: #8?\n",
+    "# with open('yandex algo tests/09 (5)') as f: #4?\n",
+    "# with open('yandex algo tests/20 (2)') as f: #3?\n",
     "\n",
     "# with open('input.txt') as f:\n",
     "    w, n, m = map(int, f.readline().split())\n",
@@ -606,14 +667,14 @@
     "\n",
     "\n",
     "left = max_word_len_a\n",
-    "right = w\n",
+    "right = w-max_word_len_b+1\n",
     "min_left = n\n",
     "min_right = m\n",
     "smallest_min = max(n,m)\n",
     "\n",
     "\n",
     "\n",
-    "while left < right:\n",
+    "while (left < right): #and (left <= (w-max_word_len_b)):\n",
     "    middle = (left+right) // 2\n",
     "    middle_plus_one = middle + 1\n",
     "    middle_minus_one = middle - 1\n",
@@ -629,21 +690,38 @@
     "        middle_plus_one_min = max(n,m)\n",
     "    if middle_minus_one_min == -1:\n",
     "        middle_minus_one_min = max(n,m)\n",
+    "        \n",
+    "    left_min = count_needed_lines(left, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "    right_min = count_needed_lines(right, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "    if left_min == -1:\n",
+    "        left_min = max(n,m)\n",
+    "    if right_min == -1:\n",
+    "        right_min = max(n,m)\n",
     "\n",
+    "    print(left, right, middle, smallest_min, middle_min, middle_plus_one_min, middle_minus_one_min)\n",
     "\n",
-    "    if middle_plus_one_min >= middle_min:\n",
-    "        right = middle\n",
+    "    if (middle_plus_one_min >= middle_min) and (middle_plus_one_min != middle_minus_one_min):\n",
+    "        if (m != 1):\n",
+    "            right = middle\n",
+    "        else:\n",
+    "            left = middle + 1\n",
     "        smallest_min = min(middle_min, smallest_min)        \n",
     "    elif middle_plus_one_min < middle_min:\n",
     "        left = middle_plus_one\n",
     "        smallest_min = min(middle_plus_one_min, smallest_min) \n",
     "\n",
-    "#     elif middle_minus_one_min < middle_min:\n",
-    "#         right = middle_minus_one\n",
-    "#         smallest_min = min(middle_minus_one_min, smallest_min)\n",
-    "#     elif middle_minus_one_min > middle_min:\n",
-    "#         left = middle\n",
-    "#         smallest_min = min(middle_min, smallest_min)\n",
+    "        \n",
+    "    if middle_minus_one_min < middle_min:\n",
+    "        right = middle_minus_one\n",
+    "        smallest_min = min(middle_minus_one_min, smallest_min)\n",
+    "    elif middle_minus_one_min > middle_min:\n",
+    "        left = middle+1\n",
+    "        smallest_min = min(middle_min, smallest_min)\n",
+    "\n",
+    "\n",
+    "    \n",
+    "    if(middle_plus_one_min == middle_minus_one_min) and (middle_minus_one_min==middle_min):\n",
+    "        left += 1\n",
     "\n",
     "#     else:\n",
     "#         left_min = count_needed_lines(left, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
@@ -675,7 +753,7 @@
     "#         else:\n",
     "#             left += 1\n",
     "            \n",
-    "    print(left, right, smallest_min, middle_plus_one_min, middle_minus_one_min)\n",
+    "#     print(left, right, middle, smallest_min, middle_plus_one_min, middle_minus_one_min)\n",
     "\n",
     "    \n",
     "print(smallest_min)\n",
@@ -686,8 +764,185 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 28,
+   "id": "62b32790",
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7 10 6 0 0 0\n",
+      "7 8 8 0 1 4\n",
+      "7 7 7 0 0 1\n",
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('yandex algo tests/D4_primer.txt') as f: #3\n",
+    "# with open('yandex algo tests/02 (1)') as f: #4\n",
+    "# with open('yandex algo tests/04 (4)') as f: #828\n",
+    "# with open('yandex algo tests/05 (4)') as f: #680\n",
+    "# with open('yandex algo tests/06 (1)_d4') as f: #  672?\n",
+    "# with open('yandex algo tests/22 (1)') as f: #  56   \n",
+    "# with open('yandex algo tests/11 (2)') as f: #8?\n",
+    "# with open('yandex algo tests/09 (5)') as f: #4?\n",
+    "# with open('yandex algo tests/20 (2)') as f: #3?\n",
+    "\n",
+    "# with open('input.txt') as f:\n",
+    "    w, n, m = map(int, f.readline().split())\n",
+    "    words_a = [i for i in map(int, f.readline().split())]\n",
+    "    words_b = [i for i in map(int, f.readline().split())]\n",
+    "    \n",
+    "words_a_pref = [0] \n",
+    "words_b_pref = [0]\n",
+    "\n",
+    "max_word_len_a = max(words_a)\n",
+    "max_word_len_b = max(words_b)\n",
+    "\n",
+    "\n",
+    "for i in range(n):\n",
+    "    words_a_pref.append(words_a[i] + words_a_pref[i])\n",
+    "    \n",
+    "for i in range(m):\n",
+    "    words_b_pref.append(words_b[i] + words_b_pref[i])\n",
+    "    \n",
+    "def count_needed_lines(left_width, w, n, m, words_a, words_b, words_a_pref, words_b_pref):\n",
+    "    needed_lines_for_a = 0\n",
+    "    needed_lines_for_b = 0\n",
+    "    \n",
+    "    \n",
+    "    words_a_used = 0\n",
+    "    \n",
+    "    if max_word_len_a > left_width:\n",
+    "        return -1\n",
+    "    \n",
+    "    else:\n",
+    "    \n",
+    "        while words_a_used < n:\n",
+    "            left = words_a_used\n",
+    "            right = n\n",
+    "\n",
+    "            while left < right:\n",
+    "                middle = (right + left + 1) // 2\n",
+    "                words = middle - words_a_used\n",
+    "                spaces_needed = max(0, words - 1)\n",
+    "                word_space_needed = words_a_pref[middle] - words_a_pref[words_a_used]\n",
+    "                total_space_needed = word_space_needed + spaces_needed\n",
+    "#                 print('left', left, 'right', right, 'middle', middle)\n",
+    "#                 print('spaces_needed', spaces_needed)\n",
+    "#                 print('word_space_needed', word_space_needed)\n",
+    "#                 print('total_space_needed', total_space_needed)\n",
+    "                if total_space_needed <= left_width:\n",
+    "                    left = middle\n",
+    "\n",
+    "                else:\n",
+    "                    right = middle - 1\n",
+    "\n",
+    "            needed_lines_for_a += 1\n",
+    "            words_a_used = right\n",
+    "\n",
+    "#             print('needed_lines_for_a', needed_lines_for_a)\n",
+    "#             print('words_a_used', words_a_used)\n",
+    "#             print()\n",
+    "            \n",
+    "            \n",
+    "    words_b_used = 0\n",
+    "    right_width = w - left_width\n",
+    "    \n",
+    "    if max_word_len_b > right_width:\n",
+    "        return -1\n",
+    "    \n",
+    "    else:\n",
+    "    \n",
+    "        while words_b_used < m:\n",
+    "            left = words_b_used\n",
+    "            right = m\n",
+    "\n",
+    "            while left < right:\n",
+    "                middle = (right + left + 1) // 2\n",
+    "                words = middle - words_b_used\n",
+    "                spaces_needed = max(0, words - 1)\n",
+    "                word_space_needed = words_b_pref[middle] - words_b_pref[words_b_used]\n",
+    "                total_space_needed = word_space_needed + spaces_needed\n",
+    "#                 print('left', left, 'right', right, 'middle', middle)\n",
+    "#                 print('spaces_needed', spaces_needed)\n",
+    "#                 print('word_space_needed', word_space_needed)\n",
+    "#                 print('total_space_needed', total_space_needed)\n",
+    "                if total_space_needed <= right_width:\n",
+    "                    left = middle\n",
+    "\n",
+    "                else:\n",
+    "                    right = middle - 1\n",
+    "\n",
+    "            needed_lines_for_b += 1\n",
+    "            words_b_used = right\n",
+    "\n",
+    "#             print('needed_lines_for_b', needed_lines_for_b)\n",
+    "#             print('words_b_used', words_b_used)\n",
+    "#             print()\n",
+    "\n",
+    "        return needed_lines_for_a, needed_lines_for_b\n",
+    "\n",
+    "\n",
+    "\n",
+    "left = max_word_len_a\n",
+    "right = w-max_word_len_b\n",
+    "mid_a, mid_b = count_needed_lines(left, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "if (mid_a == -1):\n",
+    "    mid_a = n\n",
+    "if (mid_b == -1):\n",
+    "    mid_a = m\n",
+    "diff_mid = abs(mid_a - mid_b)\n",
+    "smallest_diff = diff_mid\n",
+    "smallest_min = max(mid_a, mid_b)\n",
+    "\n",
+    "\n",
+    "while (left < right): \n",
+    "    middle = (left+right) // 2\n",
+    "    middle_plus_one = middle + 1\n",
+    "\n",
+    "\n",
+    "    mid_a, mid_b = count_needed_lines(middle, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "    diff_mid = abs(mid_a - mid_b)\n",
+    "    \n",
+    "    mid_a, mid_b = count_needed_lines(middle_plus_one, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "    diff_mid_pl_one = abs(mid_a - mid_b)\n",
+    "    \n",
+    "    if (diff_mid <= smallest_diff) or (diff_mid_pl_one <= smallest_diff):\n",
+    "        if diff_mid_pl_one <= diff_mid:\n",
+    "            left = middle_plus_one\n",
+    "            smallest_diff = min(diff_mid_pl_one,smallest_diff)\n",
+    "        else:\n",
+    "            right = middle\n",
+    "            smallest_diff = min(diff_mid,smallest_diff)\n",
+    "    \n",
+    "    else:\n",
+    "        if diff_mid_pl_one >= diff_mid:\n",
+    "            right = middle\n",
+    "            smallest_diff = min(diff_mid,smallest_diff)\n",
+    "        else:\n",
+    "            right = middle_plus_one\n",
+    "            smallest_diff = min(diff_mid_pl_one,smallest_diff)\n",
+    "            \n",
+    "#     print(left, right, middle, smallest_diff, diff_mid, diff_mid_pl_one)\n",
+    "    \n",
+    "mid_a, mid_b = count_needed_lines(left, w, n, m, words_a, words_b, words_a_pref, words_b_pref)\n",
+    "diff_mid = abs(mid_a - mid_b)\n",
+    "smallest_min = max(mid_a, mid_b)\n",
+    "\n",
+    "print (smallest_min)\n",
+    "    \n",
+    "   "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "4079efa3",
+   "id": "cbe15c38",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -695,14 +950,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5013359c",
+   "id": "3d1e3bf1",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "markdown",
-   "id": "68b7f197",
+   "id": "8070fc4e",
    "metadata": {},
    "source": [
     "### E. Нумерация дробей\n",
@@ -759,7 +1014,7 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "c387bcd8",
+   "id": "3e472e34",
    "metadata": {},
    "outputs": [
     {
@@ -833,13 +1088,85 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "89397230",
+   "id": "658e4061",
    "metadata": {},
    "outputs": [],
    "source": [
     "1000000000000000000\n",
     "179470704/1234742859"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b43e437",
+   "metadata": {},
+   "source": [
+    "### F. Велодорожки\n",
+    "\n",
+    "Ограничение времени \t4 секунды\n",
+    "Ограничение памяти \t256Mb\n",
+    "\n",
+    "Ввод \tстандартный ввод или input.txt\n",
+    "Вывод \tстандартный вывод или output.txt\n",
+    "\n",
+    "Мэр одного города очень любит следить за тенденциями и воспроизводить их в своём городе. До него дошла новость о популярности велодорожек. Теперь он хочет проложить велодорожки в своём городе и сделать это лучше, чем в других городах! Поэтому он решил сделать велодорожки даже на главной площади города.\n",
+    "\n",
+    "Главная площадь представляет собой прямоугольник шириной w и высотой h, замощённый квадратными плитками со стороной 1. Мэр хочет, чтобы было проложено две велодорожки одинаковой ширины: одна горизонтальная и одна вертикальная. К сожалению, ремонт на площади проводился достаточно давно и на некоторых плитках уже появились трещины. Мэр хочет проложить велодорожки так, чтобы после этого на площади остались только целые плитки. При строительстве велодорожек плитки на их месте убираются. Можно только убирать плитки с площади и нельзя менять местами или добавлять новые. Чтобы потратить меньше денег, мэр хочет сделать велодорожки наименьшей возможной ширины, при этом ширина дорожек должна быть целым числом. Определите, какой должна быть ширина велодорожек.\n",
+    "\n",
+    "**Формат ввода**\n",
+    "В первой строке входных данных содержатся три целых числа w,h,n (1≤w,h≤109, 1≤n≤min(w×h,3⋅105))  — ширина и высота площади и количество потрескавшихся плиток соответственно.\n",
+    "\n",
+    "В следующих n строках содержится по 2 целых числа xi,yi (1≤xi≤w, 1≤yi≤h)  — координаты потрескавшихся плиток. (xi,yi)≠(xj,yj) при i≠j.\n",
+    "\n",
+    "**Формат вывода**\n",
+    "Выведите единственное число c (1≤c≤min(w,h))  — наименьшую возможную ширину велодорожек.\n",
+    "\n",
+    "**Пример 1**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "5 6 5\n",
+    "5 4\n",
+    "2 6\n",
+    "4 1\n",
+    "2 3\n",
+    "1 4\n",
+    "\n",
+    "\n",
+    "3\n",
+    "\n",
+    "**Пример 2**\n",
+    "Ввод\n",
+    "Вывод\n",
+    "\n",
+    "4 3 4\n",
+    "1 1\n",
+    "4 3\n",
+    "4 1\n",
+    "1 3\n",
+    "\t\n",
+    "\n",
+    "3\n",
+    "\n",
+    "**Примечания**\n",
+    "Ниже приведены картинки к примерам из условия. Серым отмечены потрескавшиеся плитки. Во втором примере ширина дорожек равна меньшей из сторон прямоугольника. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5a606d8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "80e1a854",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
